also allow program_ids in list_experiments
